Proyecto2/PODs/deploygRPC.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: so1-p2-dpcliente
spec: 
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: contenedor-clientegrpc
          image: erickmayorgar/grpc-client-so1:1.0.0 
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
          ports:
            - containerPort: 3004
        - name: contenedor-servidorgrpc
          image: erickmayorgar/grpc-server-so1:1.0.0 
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: so1-p2-servicio-cliente
spec:
  selector:
    app: client
  ports:
    - port: 3004
      targetPort: 3004
  type: LoadBalancer
