Proyecto2/PODs/deployredis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-p2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: redis-p2-service
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: LoadBalancer
