Proyecto2/PODs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-redis-ingrerss
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
spec:
  ingressClassName: nginx
  rules:
  - host: 34.30.210.71.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: so1-p2-python-service
            port:
              number: 3003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliente-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
  - host: 34.30.210.71.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: so1-p2-servicio-cliente
            port:
              number: 3004
